Fixing text in form buttons on small displays

--- a/src/app/core/components/maintenance/maintenance-form/maintenance-form.component.css
+++ b/src/app/core/components/maintenance/maintenance-form/maintenance-form.component.css
@@ -31,4 +31,8 @@
     .form-card {
         min-width: 300px;
     }
+
+    .button-icon {
+        display: none;
+    }
 }
